[package]
name = "tls-listener"
description = "wrap incoming Stream of connections in TLS"
version = "0.2.1"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
repository = "https://github.com/tmccombs/tls-listener"
edition = "2018"
license = "Apache-2.0"

[features]
default = ["tokio-net"]

tokio-net = ["tokio/net"]
hyper-h1 = ["hyper", "hyper/http1"]
hyper-h2 = ["hyper", "hyper/http2"]

[dependencies]
futures-util = "0.3.8"
tokio = "1.0"
tokio-rustls = "0.22.0"
pin-project = "1.0.2"
#tokio-native-tls = "0.3.0"

[dependencies.hyper]
version = "0.14.1"
features = ["server"]
optional = true

[dev-dependencies]
hyper = { version = "0.14.1", features = ["server", "http1", "tcp", "stream"] }
tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util"] }

[[example]]
name = "http"
path = "examples/http.rs"
required-features = ["hyper-h1"]

[[example]]
name = "echo"
path = "examples/echo.rs"
required-features = ["tokio-net"]

[[example]]
name = "http-low-level"
path = "examples/http-low-level.rs"
required-features = ["hyper-h1"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
