[package]
name = "tls-listener"
description = "wrap incoming Stream of connections in TLS"
version = "0.5.1"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
repository = "https://github.com/tmccombs/tls-listener"
edition = "2018"
license = "Apache-2.0"

[features]
default = ["tokio-net"]
rustls = ["tokio-rustls"]
native-tls = ["tokio-native-tls"]
openssl = ["tokio-openssl", "openssl_impl"]
rt = ["tokio/rt"]

tokio-net = ["tokio/net"]
hyper-h1 = ["hyper", "hyper/http1"]
hyper-h2 = ["hyper", "hyper/http2"]

[dependencies]
futures-util = "0.3.8"
hyper = { version = "0.14.1", features = ["server", "tcp"], optional = true }
pin-project-lite = "0.2.8"
thiserror = "1.0.30"
tokio = { version = "1.0", features = ["time"] }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-rustls = { version = "0.23.0", optional = true }
tokio-openssl = { version = "0.6.3", optional = true }
openssl_impl = { package = "openssl", version = "0.10.32", optional = true }

[dev-dependencies]
hyper = { version = "0.14.1", features = ["http1", "stream"] }
tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util", "signal"] }

[[example]]
name = "http"
path = "examples/http.rs"
required-features = ["hyper-h1"]

[[example]]
name = "http-stream"
path = "examples/http-stream.rs"
required-features = ["hyper-h1"]

[[example]]
name = "echo"
path = "examples/echo.rs"
required-features = ["tokio-net"]

[[example]]
name = "echo-threads"
path = "examples/echo-threads.rs"
required-features = ["tokio-net", "rt", "tokio/rt-multi-thread"]

[[example]]
name = "http-low-level"
path = "examples/http-low-level.rs"
required-features = ["hyper-h1"]

[package.metadata.docs.rs]
features = ["rustls", "native-tls", "openssl", "hyper-h1", "hyper-h2", "rt"]
rustdoc-args = ["--cfg", "docsrs"]
