[package]
name = "tls-listener"
description = "wrap incoming Stream of connections in TLS"
version = "0.11.0"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
repository = "https://github.com/tmccombs/tls-listener"
edition = "2018"
license = "Apache-2.0"

[features]
default = ["tokio-net"]
rustls-core = ["tokio-rustls"]
rustls-aws-lc = ["rustls-core", "tokio-rustls/aws-lc-rs"]
rustls-fips = ["rustls-aws-lc", "tokio-rustls/fips"]
rustls-ring = ["rustls-core", "tokio-rustls/ring"]
rustls = ["rustls-aws-lc", "tokio-rustls/default"]
native-tls = ["tokio-native-tls"]
openssl = ["tokio-openssl", "openssl_impl"]
rt = ["tokio/rt"]

tokio-net = ["tokio/net"]

[dependencies]
futures-util = "0.3.8"
pin-project-lite = "0.2.13"
thiserror = "2.0.3"
tokio = { version = "1.0", features = ["time"] }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-rustls = { version = "0.26.1", default-features = false, optional = true }
tokio-openssl = { version = "0.6.3", optional = true }
openssl_impl = { package = "openssl", version = "0.10.32", optional = true }

[dev-dependencies]
hyper = { version = "1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
tokio = { version = "1.0", features = [
    "rt",
    "macros",
    "net",
    "io-util",
    "signal",
] }

[[example]]
name = "http"
path = "examples/http.rs"

[[example]]
name = "http-stream"
path = "examples/http-stream.rs"

[[example]]
name = "echo"
path = "examples/echo.rs"
required-features = ["tokio-net"]

[[example]]
name = "echo-threads"
path = "examples/echo-threads.rs"
required-features = ["tokio-net", "rt", "tokio/rt-multi-thread"]

[[example]]
name = "http-change-certificate"
path = "examples/http-change-certificate.rs"

[package.metadata.docs.rs]
features = [
    "rustls-core",
    "native-tls",
    "openssl",
    "rt"
]
rustdoc-args = ["--cfg", "docsrs"]
